--- a/style.css
+++ b/style.css
@@ -23,10 +23,10 @@ body {
 
 h1 {
     color: #333;
-    text-align: center;
+    text-align: left;
 }
 
-.left div, .right div {
+.left div.section, .right div.section {
 	padding: 10px;
     margin: 20px auto;
     background-color: #fff;
@@ -35,6 +35,7 @@ h1 {
 }
 .left > div, .right > div {
     padding: 20px;
+    padding-top: 10px;
     margin: 0;
     background-color: #fff;
     box-shadow: 0px 0px 10px 0px rgba(0,0,0,0.1);
@@ -42,7 +43,15 @@ h1 {
 }
 
 .left div.details, .right div.details {
-	background: #eee
+	padding: 10px;
+    margin: 0;
+    border: 2px #ccc dashed;
+    border-radius: 8px;
+}
+div.details p {
+	margin: 0;
+	font-style: italic;
+	color: #666
 }
 
 label {
@@ -54,4 +63,30 @@ select {
     width: 100%;
     height: 30px;
     margin-bottom: 20px;
+}
+
+.ringsContainer {
+    position: relative;
+}
+
+.container img {
+    width: 100%;
+    height: auto;
+}
+
+.circle {
+    background: none; 
+    padding: none;
+    margin: none;
+    border: none;
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    border-radius: 50%;
+    background: white;
+    color: black;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 20px;
 }
